@@ -1,3 +1,8 @@
+2007-07-17  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab.c: (main):
+	BUGZILLA #453742 - should display a dialog when there is no disk mounted
+
 2007-07-16 Alejandro G. Castro <acastro@igalia.com>
 
 	Patch cotributed by Philippe Gauthier <philippe.gauthier@deuxpi.ca>
